# SeederBOT

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHATGPT_SETUP.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  WATCHLIST_SETUP.md  chatgpt-action-spec.json  docker-compose.development.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
ops/nginx/: nginx.conf
ops/openapi/: seederbot.json
src/app/: blackhole.py  config.py  error_handlers.py  exceptions.py  health.py  jackett.py  logging_config.py  main.py  middleware.py  models.py  performance.py  radarr.py  watchlist.py
tests/: test_jackett.py  test_main.py  test_radarr.py
